--- a/src/components/bem-blocks/_instrument--catalog.html
+++ b/src/components/bem-blocks/_instrument--catalog.html
@@ -1,4 +1,45 @@
-<a class="instrument instrument--catalog popup-link" href="instrument-@@instrumentnum">
+<!-- <li class="instrument instrument--catalog popup-link" href="instrument-@@instrumentnum">
+	
+
+	<img class="instrument__img" src="@@instrumentImg" alt="instrument">
+
+	<div id="instrument-@@instrumentNum" class="popup instrument__popup">
+		<div class="popup__body ">
+			<div class="popup__content ">
+				<a class="popup__close close-popup" href="#">
+					<svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<g opacity="0.5">
+							<path d="M19 6L5 20" stroke="#333333" stroke-width="2" stroke-linecap="round" />
+							<path d="M5 6L19 20" stroke="#333333" stroke-width="2" stroke-linecap="round" />
+						</g>
+					</svg>
+				</a>
+
+				<div class="popup__info">
+
+					<div class="popup__img-box">
+						<img class="popup__img" src="@@instrumentImg" alt="images">
+					</div>
+
+					<div class="popup__card">
+						<span class="popup__card-title">Loom</span>
+
+						<p class="popup__card-descr">
+							Easy to use screen capture app for windows and macOS
+						</p>
+
+						<a class="popup__card-link button" href="/catalog.html">
+							Explore
+						</a>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</li> -->
+
+<li class="instrument instrument--catalog">
 	<svg class="instrument__icon" width="22" height="20" viewbox="0 0 22 20" fill="none"
 		xmlns="http://www.w3.org/2000/svg">
 		<path fill-rule="evenodd" clip-rule="evenodd"
@@ -20,23 +61,40 @@
 		<rect x="0.5" y="0.5" width="23" height="23" rx="7.5" stroke="#EF4545" />
 	</svg>
 
+	<a class="instrument__open popup-link" href="#instrument-@@instrumentNum"></a>
 	<img class="instrument__img" src="@@instrumentImg" alt="instrument">
-
-	<div id="instrument-@@instrumentnum" class="popup ">
+	<div id="instrument-@@instrumentNum" class="popup instrument__popup">
 		<div class="popup__body ">
 			<div class="popup__content ">
-				<a href="#" class="popup__close close-popup">
-					<svg class="popup__close-icon" xmlns="http://www.w3.org/2000/" svg, viewbox="0 0 352 512">
-						<path
-							d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z">
-						</path>
+				<a class="popup__close close-popup" href="#">
+					<svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<g opacity="0.5">
+							<path d="M19 6L5 20" stroke="#333333" stroke-width="2" stroke-linecap="round" />
+							<path d="M5 6L19 20" stroke="#333333" stroke-width="2" stroke-linecap="round" />
+						</g>
 					</svg>
 				</a>
-				<div class="popup__title">lorem</div>
-				<div class="popup__info ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat similique
-					repellendus explicabo nihil obcaecati nobis laudantium nisi, accusantium quisquam architecto blanditiis.
-					Minima inventore suscipit sed saepe voluptates fugit facilis nihil?</div>
+
+				<div class="popup__info">
+
+					<div class="popup__img-box">
+						<img class="popup__img" src="@@instrumentImg" alt="images">
+					</div>
+
+					<div class="popup__card">
+						<span class="popup__card-title">Loom</span>
+
+						<p class="popup__card-descr">
+							Easy to use screen capture app for windows and macOS
+						</p>
+
+						<a class="popup__card-link button" href="/catalog.html">
+							Explore
+						</a>
+
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
-</a>
+</li>
